# browser-agent

./: .brouser_agent_status  .env  .env.example  .gitignore  DEPENDENCY_FIX.md  MANIFEST.in  Makefile  README.md  fix_placeholder_error.py  pyproject.toml  quick_fix.py  requirements-dev.txt  requirements-mcp.txt  requirements-minimal.txt  requirements.txt  robots.txt  run_gui.py  setup.py  sitemap.xml  start.sh  task_history.json  test_enhanced_browser.py  test_install.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
.vercel/: project.json
assets/: README.md
brouser_agent/: cli.py  cli_main.py  gui_main.py
brouser_agent/browsers/: manager.py
brouser_agent/config/: constants.py
brouser_agent/core/: agent.py  ai_processor.py  config.py  multi_llm_processor.py
brouser_agent/gui/: chat_interface.py  main_window.py
brouser_agent/mcp/: server_manager.py
brouser_agent/plugins/: registry.py
brouser_agent/utils/: automation.py  logger.py
config/: .pre-commit-config.yaml  README.md  mcp_servers.json  task_history.json
deployment/: Dockerfile  README.md  docker-compose.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  MCP_AUTH_FEATURE.md  MCP_CUSTOM_SETUP.md  MCP_README.md  README.md
examples/: advanced_usage.py  basic_usage.py  gui_demo.py
pages/: examples.html  faq.html  quick-start.html  troubleshooting.html
scripts/: README.md  fix_dependency_detection.py  init.py  main.js  mcp_custom_server.py  run_gui.py  start.bat
tests/: README.md  pytest.ini  test_auth_tokens.py  test_dependency_fix.py  test_enhanced_integration.py  test_mcp_setup.py  test_unified_automation.py  tox.ini
website/: README.md  index.html
website/pages/: api.html  features.html  integrations.html
website/scripts/: search.js
website/styles/: main.css
